--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kolonial</title>
-</head>
-<body>
-
-  <h1>Hello World!</h1>
-
-</body>
+  <head>
+    <mea charset="UTF-8"></mea>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>Kolonial</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
 </html>
